fixx overflow

--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,6 @@ header {
     background-color: #fff; }
 
 @media only screen and (max-width: 768px) {
-  body {
-    overflow-y: hidden; }
   .burger {
     display: block; }
   .navbar__nav {
