--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -228,9 +228,6 @@ header {
 //mobile nav
 
 @media only screen and (max-width: 768px) {
-  body {
-    overflow-y: hidden;
-  }
   .burger {
     display: block;
   }
